Added visitor counter

--- a/index.html
+++ b/index.html
@@ -711,6 +711,9 @@
     </div>
   </footer>
 
+  <script data-goatcounter="https://hrushi.goatcounter.com/count"
+        async src="//gc.zgo.at/count.js"></script>
+
   <script>
     document.addEventListener('DOMContentLoaded', () => {
       const connectBtn = document.getElementById('connect-btn');
