Added visitors count to page

--- a/index.html
+++ b/index.html
@@ -707,7 +707,8 @@
   <!-- Footer -->
   <footer class="py-8 glassmorphism">
     <div class="container mx-auto px-6 text-center">
-      <p class="text-gray-400">🥳 That’s all, folks! But maybe it’s just the beginning for us?</p>
+      <p>🥳 That’s all, folks! But maybe it’s just the beginning for us? </p>
+      <p>Unique Visitors: <span class="goatcounter-uniques"></span></p>
     </div>
   </footer>
 
